--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
             mv /home/ubuntu/zarinatta-batch/tobe/zarinatta-batch.jar /home/ubuntu/zarinatta-batch/current/zarinatta-batch.jar
             cd /home/ubuntu/zarinatta-batch/current
             sudo fuser -k -n tcp 8080 || true
-            nohup java -jar zarinatta-batch.jar > ./output.log 2>&1 & 
+            nohup java -jar -Duser.timezone=Asia/Seoul zarinatta-batch.jar > ./output.log 2>&1 & 
             rm -rf /home/ubuntu/zarinatta-batch/tobe
