--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '3.3.2'
     id 'io.spring.dependency-management' version '1.1.6'
+    id "io.sentry.jvm.gradle" version "5.12.2"
 }
 
 group = 'com.zarinatta'
@@ -13,10 +20,19 @@ java {
     }
 }
 
+
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+sentry {
+    includeSourceContext = true
+
+    org = "zarinatta"
+    projectName = "zarinatta-batch"
+    authToken = System.getenv("SENTRY_AUTH_TOKEN")
 }
 
 repositories {
